⬆️ Update to 1.20.1
- Migration to NeoForge
- Improve JEI integration